# temp

./: CMakeLists.txt  README.md
config/: custom-yolov2-tiny-voc.cfg  params.txt  placard_labels_config.json  yolo_config_real.yaml  yolo_config_sim.yaml
scripts/: collect_data.sh  getYoloFormat.py  plot_map.py  process_observations.py  spawn_placards_v3.sh
settings/: k4a_settings.yaml  ros_settings.yaml
simulation_maps/building_editor_models/TestModel/: model.sdf
simulation_maps/building_editor_models/Untitled/: model.sdf
simulation_maps/building_editor_models/h_hallway_blank/: model.config  model.sdf
simulation_maps/building_editor_models/h_hallway_filled/: model.config  model.sdf
simulation_maps/building_editor_models/pentagon_hallway_blank/: model.config  model.sdf
simulation_maps/building_editor_models/pentagon_hallway_filled/: model.config  model.sdf
simulation_maps/building_editor_models/square_hallway_blank/: model.config  model.sdf
simulation_maps/building_editor_models/square_hallway_filled/: model.config  model.sdf
simulation_maps/building_editor_models/triangle_hallway_blank/: model.config  model.sdf
simulation_maps/building_editor_models/triangle_hallway_filled/: model.config  model.sdf
simulation_maps/building_editor_models/u-hallway/: model.config  model.sdf
simulation_maps/building_editor_models/u_hallway_blank/: model.config  model.sdf
simulation_maps/building_editor_models/u_hallway_filled/: model.config  model.sdf
src/: CMakeLists.txt
src/app/: CMakeLists.txt  get_frames.cpp  get_semantics.cpp  label_placards.cpp  map_k4a.cpp  map_ros.cpp  play_video.cpp  test_display.cpp  test_icp.cpp  test_live.cpp  test_map_merging.cpp  test_orbslam.cpp  test_placard_extraction.cpp  test_yolov5.cpp  view_images_at_time.cpp  write_video.cpp
src/common_includes/: bimap.h  bounding_box.h  data_packet.h  device_playback.h  do_once.h  frame_recipient.h  placard.h  simple_pose.h
src/lib/ORBSLAM_interface/: CMakeLists.txt
src/lib/ORBSLAM_interface/include/: fr_track_orb_slam.h  orbslam_utils.h
src/lib/ORBSLAM_interface/src/: fr_track_orb_slam.cpp
src/lib/apriltag_interface/: CMakeLists.txt
src/lib/apriltag_interface/include/apriltag_interface/: april_tag_manager.h  fr_april_tag.h  fr_apriltag_pose.h
src/lib/apriltag_interface/src/: april_tag_manager.cpp  fr_april_tag.cpp  fr_apriltag_pose.cpp
src/lib/frame_recipients/: CMakeLists.txt
src/lib/frame_recipients/include/frame_recipients/: do_nothing_frame_recipient.h  fr_bgra_to_rgb.h  fr_custom_rec.h  fr_depth_map_filter.h  fr_depth_to_pointcloud.h  fr_display.h  fr_record_frames.h  fr_rgb_4k_to_1080p.h  fr_rgb_4k_to_720p.h  fr_save_packet.h  fr_splitter.h  index_reader_playback.h
src/lib/frame_recipients/src/: do_nothing_frame_recipient.cpp  fr_bgra_to_rgb.cpp  fr_depth_map_filter.cpp  fr_depth_to_pointcloud.cpp  fr_display.cpp  fr_record_frames.cpp  fr_rgb_4k_to_1080p.cpp  fr_rgb_4k_to_720p.cpp  fr_save_packet.cpp  fr_splitter.cpp  index_reader_playback.cpp
src/lib/k4a_borrowed/: CMakeLists.txt
src/lib/k4a_borrowed/include/: gpudepthtopointcloudconverter.h  kfr_depth_to_pointcloud_gpu.h  openglhelpers.h
src/lib/k4a_borrowed/src/: kfr_depth_to_pointcloud_gpu.cpp
src/lib/kinect_interface/: CMakeLists.txt
src/lib/kinect_interface/include/azure_kinect_interface/: kfr_capture_to_bgra.h  kfr_capture_to_depth.h  kfr_capture_to_timestamp.h  kfr_depth_to_pointcloud.h  kfr_recorder.h  kfr_recorder_factory.h  kfr_release_capture.h  kinect_frame_recipient.h  kinect_packet.h  kinect_playback.h  kinect_wrapper.h
src/lib/kinect_interface/src/: kfr_capture_to_bgra.cpp  kfr_capture_to_depth.cpp  kfr_capture_to_timestamp.cpp  kfr_depth_to_pointcloud.cpp  kfr_recorder.cpp  kfr_recorder_factory.cpp  kfr_release_capture.cpp  kinect_packet.cpp  kinect_playback.cpp  kinect_wrapper.cpp
src/lib/mapping/: CMakeLists.txt
src/lib/mapping/include/: ceres_utils.h  fr_map_merging_handler.h  kfr_track_icp_slam.h  map_merger.h  mm_point_cloud_iou.h  occupation_map_2d.h
src/lib/mapping/src/: fr_map_merging_handler.cpp  kfr_track_icp_slam.cpp  mm_point_cloud_iou.cpp  occupation_map_2d.cpp
src/lib/octomap_interface/: CMakeLists.txt
src/lib/octomap_interface/include/: octmap_utils.h
src/lib/ros_interface/: CMakeLists.txt
src/lib/ros_interface/include/ros_interface/: rfr_get_frame_info.h  rfr_sync_image_frames.h  ros_frame_recipient.h  ros_packet.h  rosbag_playback.h
src/lib/ros_interface/src/: rfr_get_frame_info.cpp  rfr_sync_image_frames.cpp  rosbag_playback.cpp
src/lib/semantic_processing/: CMakeLists.txt
src/lib/semantic_processing/include/: fr_extract_placard.h  fr_get_bounding_boxes.h  image_segmentation.h  observer.h  placard_database.h  yolo_observer.h  yolov5_observer.h
src/lib/semantic_processing/src/: fr_extract_placard.cpp  fr_get_bounding_boxes.cpp  image_segmentation.cpp  placard_database.cpp  yolo_observer.cpp  yolov5_observer.cpp
src/lib/settings_management/: CMakeLists.txt
src/lib/settings_management/include/settings_management/: settings.h
src/lib/settings_management/src/: settings.cpp
src/lib/structure_from_motion/ceres/include/: cff_xyz.h  factory.h  pf_pairwise.h
src/lib/structure_from_motion/ceres/src/: cff_xyz.cpp  pf_pairwise.cpp
src/lib/structure_from_motion/frames/: frame.h
src/lib/structure_from_motion/image_features/include/: feature.h  feature_manager.h  simple_feature_manager.h
src/lib/structure_from_motion/image_features/src/: simple_feature_manager.cpp
src/lib/structure_from_motion/orb_features/include/: orb.h
src/lib/structure_from_motion/orb_features/src/: orb.cpp
urdf_models/sign/: 3_100.dae  3_100.urdf  3_101.dae  3_101.urdf  3_102.dae  3_102.urdf  3_103.dae  3_103.urdf  3_104.dae  3_104.urdf  3_105.dae  3_105.urdf  3_106.dae  3_106.urdf  3_107.dae  3_107.urdf  3_108.dae  3_108.urdf  3_109.dae  3_109.urdf
